fix(e2e)  / profile
